--- a/Models/PA2_corrected2.ipynb
+++ b/Models/PA2_corrected2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -22,21 +22,7 @@
       "('fitting linear model on ', 'technical_30')\n",
       "('fitting linear model on ', 'technical_13')\n",
       "('fitting linear model on ', 'technical_34')\n",
-      "adding new features\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/scipy/linalg/basic.py:884: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
-      "  warnings.warn(mesg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "adding new features\n",
       "(0, 0.00037784202140755951, [u'fundamental_63', u'fundamental_20'])\n",
       "(1, 0.00037783532752655447, [u'technical_33', u'fundamental_42'])\n",
       "(2, 0.00037783311563543975, [u'fundamental_29', u'fundamental_23'])\n",
@@ -240,6 +226,7 @@
     "models=[]\n",
     "columns=[]\n",
     "residuals=[]\n",
+    "predicts=[]\n",
     "for elt in cols2fit:\n",
     "    print(\"fitting linear model on \", elt)\n",
     "    model=recurrent_linear_approx(quant=.99, limit_size_train=.9)\n",
@@ -247,6 +234,7 @@
     "    models.append(model)\n",
     "    columns.append([elt])\n",
     "    residuals.append(model.predict(train[[elt]].fillna(d_mean))-train.y) ####\n",
+    "    predicts.append(model.predict(train[[elt]].fillna(d_mean)))####\n",
     "\n",
     "train=train.fillna(d_mean)\n",
     "    \n",
@@ -266,45 +254,26 @@
     "for elt in model.estimators_:\n",
     "    models.append(elt)\n",
     "    columns.append(treecols)\n",
-    "    residuals.append(elt.predict(trainer)-train.y)\n",
-    "\n",
+    "    residuals.append(elt.predict(trainer)-train.y)####\n",
+    "    predicts.append(elt.predict(trainer))####\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training selection model\n",
-      "end of trainind, now predicting\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:85: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(100, 9, 0.021278908598623116, -0.12814614764980251)\n",
-      "(200, 12, -0.17000252076174163, -0.12583690651667903)\n"
+      "training selection model\n"
      ]
     }
    ],
@@ -324,13 +293,15 @@
     "tokeepmodels=[]\n",
     "tokeepcolumns=[]\n",
     "tokeepresiduals=[]\n",
+    "tokeeppredicts=[] ####\n",
     "for elt in tokeep:\n",
     "    tokeepmodels.append(models[elt])\n",
     "    tokeepcolumns.append(columns[elt])\n",
     "    tokeepresiduals.append(residuals[elt])\n",
+    "    tokeeppredicts.append(predicts[elt]) ####\n",
     "\n",
     "#creating a new target for a model in charge of predicting which model is best for the current line\n",
-    "targetselector=np.array(tokeepresiduals).T\n",
+    "targetselector=np.array(tokeeppredicts).T ####\n",
     "#targetselector=np.argmin(targetselector, axis=1) ####\n",
     "\n",
     "print(\"training selection model\")\n",
@@ -353,6 +324,53 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "env = kagglegym.make()\n",
+    "o = env.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "end of trainind, now predicting\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:85: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 0, -0.034571658732174285, -0.13036346360281539)\n",
+      "(200, 0, -0.16274753625116042, -0.12519281688096084)\n",
+      "(300, 0, -0.073528620898643982, -0.12504041000053212)\n",
+      "(400, 0, -0.14228357566229918, -0.1237395365527434)\n",
+      "(500, 0, -0.12656867920990125, -0.12465435103305587)\n",
+      "(600, 0, -0.16709568623334459, -0.12444854111345408)\n",
+      "(700, 0, -0.23141012006258127, -0.13221579292084801)\n",
+      "(800, 0, -0.082387681803755261, -0.13502383243744576)\n",
+      "(900, 1, -0.16323603684940233, -0.13474138229016913)\n",
+      "-0.0077689506057\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"end of trainind, now predicting\")\n",
     "indice=0\n",
