--- a/Models/PA2_corrected2_Ensemble_rfr.ipynb
+++ b/Models/PA2_corrected2_Ensemble_rfr.ipynb
@@ -160,6 +160,7 @@
     "models=[]\n",
     "columns=[]\n",
     "residuals=[]\n",
+    "predicts=[]\n",
     "for elt in cols2fit:\n",
     "    print(\"fitting linear model on \", elt)\n",
     "    model=recurrent_linear_approx(quant=.99, limit_size_train=.9)\n",
@@ -167,6 +168,7 @@
     "    models.append(model)\n",
     "    columns.append([elt])\n",
     "    residuals.append(model.predict(train[[elt]].fillna(d_mean))-train.y) ####\n",
+    "    predicts.append(model.predict(train[[elt]].fillna(d_mean)))####\n",
     "\n",
     "train=train.fillna(d_mean)\n",
     "    \n",
@@ -186,7 +188,8 @@
     "for elt in model.estimators_:\n",
     "    models.append(elt)\n",
     "    columns.append(treecols)\n",
-    "    residuals.append(elt.predict(trainer)-train.y)\n"
+    "    residuals.append(elt.predict(trainer)-train.y)####\n",
+    "    predicts.append(elt.predict(trainer))####\n"
    ]
   },
   {
@@ -214,13 +217,15 @@
     "tokeepmodels=[]\n",
     "tokeepcolumns=[]\n",
     "tokeepresiduals=[]\n",
+    "tokeeppredicts=[] ####\n",
     "for elt in tokeep:\n",
     "    tokeepmodels.append(models[elt])\n",
     "    tokeepcolumns.append(columns[elt])\n",
     "    tokeepresiduals.append(residuals[elt])\n",
+    "    tokeeppredicts.append(predicts[elt]) ####\n",
     "\n",
     "#creating a new target for a model in charge of predicting which model is best for the current line\n",
-    "targetselector=np.array(tokeepresiduals).T\n",
+    "targetselector=np.array(tokeeppredicts).T ####\n",
     "#targetselector=np.argmin(targetselector, axis=1) ####\n",
     "\n",
     "print(\"training selection model\")\n",
@@ -228,7 +233,7 @@
     "#modelselector.fit(trainer, targetselector)\n",
     "# modelselector = xgb.XGBRegressor(objective='reg:linear', colsample_bytree=.8, \\\n",
     "#                         subsample=.9, min_child_weight=1000, base_score=.5) ####\n",
-    "modelselector=ensemble.ExtraTreesRegressor(n_estimators=100, max_depth=4, n_jobs=-1, random_state=rnd, verbose=0)\n",
+    "modelselector=ensemble.ExtraTreesRegressor(n_estimators=100, max_depth=4, n_jobs=-1, random_state=rnd, verbose=0) ####\n",
     "modelselector.fit(targetselector,train.y) ####\n",
     "#print(pd.DataFrame(modelselector.feature_importances_,index=treecols).sort_values(by=[0]).tail(30))\n",
     "\n",
