--- a/Models/PA2_corrected2.ipynb
+++ b/Models/PA2_corrected2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -261,14 +261,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training selection model\n"
+     ]
+    }
+   ],
    "source": [
     "#model selection : create a new target selecting models with lowest asolute residual for each line\n",
     "#the objective at this step is to keep only the few best elements which should\n",
@@ -323,11 +331,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "end of trainind, now predicting\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:85: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100, 10, -0.0078315965558075611, -0.12739532485172517)\n",
+      "(200, 28, -0.19046157170267886, -0.11768179477331761)\n",
+      "(300, 44, -0.078904782071458526, -0.11651339259352381)\n",
+      "(400, 56, -0.14704282867497678, -0.11875512963481211)\n",
+      "(500, 69, -0.11981813663683465, -0.11981591822815842)\n",
+      "(600, 82, -0.12356951300501326, -0.11880023012005092)\n",
+      "(700, 102, -0.26903486488516026, -0.1244415890463063)\n",
+      "(800, 117, -0.10171361171305217, -0.12728787671615552)\n",
+      "(900, 131, -0.1534948981422686, -0.12771302611484972)\n",
+      "0.0192876632685\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"end of trainind, now predicting\")\n",
     "indice=0\n",
