--- a/Models/PA2_corrected2.ipynb
+++ b/Models/PA2_corrected2.ipynb
@@ -299,9 +299,10 @@
     "    tokeepcolumns.append(columns[elt])\n",
     "    tokeepresiduals.append(residuals[elt])\n",
     "    tokeeppredicts.append(predicts[elt]) ####\n",
+    "    trainer['prediction'+str(elt)]=predicts[elt] ########\n",
     "\n",
     "#creating a new target for a model in charge of predicting which model is best for the current line\n",
-    "targetselector=np.array(tokeeppredicts).T ####\n",
+    "#targetselector=np.array(tokeeppredicts).T ####\n",
     "#targetselector=np.argmin(targetselector, axis=1) ####\n",
     "\n",
     "print(\"training selection model\")\n",
@@ -309,7 +310,8 @@
     "#modelselector.fit(trainer, targetselector)\n",
     "modelselector = xgb.XGBRegressor(objective='reg:linear', colsample_bytree=.8, \\\n",
     "                        subsample=.9, min_child_weight=1000, base_score=.5) ####\n",
-    "modelselector.fit(targetselector,train.y) ####\n",
+    "#modelselector.fit(targetselector,train.y) ####\n",
+    "modelselector.fit(trainer,train.y) ####\n",
     "#print(pd.DataFrame(modelselector.feature_importances_,index=treecols).sort_values(by=[0]).tail(30))\n",
     "\n",
     "#lastvalues=train[train.timestamp==905][['id']+diff_cols].copy()\n",
@@ -401,14 +403,16 @@
     "    \n",
     "    testid=test.id\n",
     "    test=featureexpander.transform(test[cols])\n",
-    "    #test=test.join(featureexpander.transform(test[cols]))\n",
     "    #prediction using modelselector and models list\n",
     "    #selected_prediction = modelselector.predict_proba(test.loc[: ,treecols])\n",
-    "    y_test=np.zeros((test.shape[0], len(tokeep)))\n",
+    "    #y_test=np.zeros((test.shape[0], len(tokeep))) ####\n",
     "    for ind,elt in enumerate(tokeepmodels):\n",
     "        #pred['y']+=selected_prediction[:,ind]*elt.predict(test[tokeepcolumns[ind]])\n",
-    "        y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]])\n",
-    "    pred['y']=modelselector.predict(y_test)\n",
+    "        #y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]]) ####\n",
+    "        test['prediction'+str(elt)]=elt.predict(test[tokeepcolumns[ind]]) ########\n",
+    "        \n",
+    "    #pred['y']=modelselector.predict(y_test) ####\n",
+    "    pred['y']=modelselector.predict(test) ########\n",
     "\n",
     "    indexbase=pred.index\n",
     "    pred.index=testid    \n",
@@ -546,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
