--- a/Models/PA2_corrected2_Ensemble_rfr.ipynb
+++ b/Models/PA2_corrected2_Ensemble_rfr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -13,79 +13,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(806298, 111)\n",
-      "(805548, 126)\n",
-      "('fitting linear model on ', 'technical_22')\n",
-      "('fitting linear model on ', 'technical_20')\n",
-      "('fitting linear model on ', 'technical_30_d')\n",
-      "('fitting linear model on ', 'technical_20_d')\n",
-      "('fitting linear model on ', 'technical_30')\n",
-      "('fitting linear model on ', 'technical_13')\n",
-      "('fitting linear model on ', 'technical_34')\n",
-      "adding new features\n"
+      "(806298, 111)\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/scipy/linalg/basic.py:884: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
-      "  warnings.warn(mesg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 0.00037784202140755951, [u'fundamental_63', u'fundamental_20'])\n",
-      "(1, 0.00037783532752655447, [u'technical_33', u'fundamental_42'])\n",
-      "(2, 0.00037783311563543975, [u'fundamental_29', u'fundamental_23'])\n",
-      "(3, 0.00037783940206281841, [u'fundamental_41', u'fundamental_46'])\n",
-      "(4, 0.0003778421669267118, [u'technical_41', u'fundamental_44'])\n",
-      "(5, 0.00037783652078360319, [u'fundamental_7', u'fundamental_0'])\n",
-      "(6, 0.00037780959974043071, [u'fundamental_54', u'fundamental_5'])\n",
-      "(7, 0.00037784167216159403, [u'fundamental_17', 'nbnulls'])\n",
-      "(8, 0.00037783363950438797, [u'technical_6', u'fundamental_45'])\n",
-      "(9, 0.00037784193409606814, [u'fundamental_6', u'fundamental_19'])\n",
-      "(10, 0.00037783838342875242, [u'technical_0', u'fundamental_35'])\n",
-      "(11, 0.00037783297011628747, [u'fundamental_31', u'technical_44'])\n",
-      "(12, 0.00037781347054988146, [u'fundamental_12', u'fundamental_13'])\n",
-      "(13, 0.00037781929131597281, [u'fundamental_18', u'fundamental_26'])\n",
-      "(14, 0.00037784263258799911, [u'fundamental_22', u'fundamental_49'])\n",
-      "(15, 0.00037783448351547122, ['technical_13_na', u'fundamental_52'])\n",
-      "(16, 0.00037784251617267728, [u'fundamental_61', u'technical_1'])\n",
-      "(17, 0.00037781518767587841, [u'technical_17', u'fundamental_43'])\n",
-      "(18, 0.00037783494917675853, [u'technical_24', 'technical_44_na'])\n",
-      "(19, 0.00037784254527650774, [u'technical_14', u'fundamental_58'])\n",
-      "(20, 0.000377667136490345, [u'technical_12', u'technical_20'])\n",
-      "(21, 0.00037783668613258385, ['technical_34_d', u'fundamental_28'])\n",
-      "(22, 0.00037784242886118591, [u'technical_5', u'fundamental_10'])\n",
-      "(23, 0.00037774000783854698, ['technical_30_d', u'technical_22'])\n",
-      "(24, 0.00037782650906592607, [u'fundamental_55', u'technical_16'])\n",
-      "(25, 0.00037781510036438704, [u'derived_2', u'fundamental_59'])\n",
-      "(26, 0.00037783753941766918, [u'fundamental_40', u'derived_0'])\n",
-      "(27, 0.00037783489096909761, [u'technical_32', u'technical_38'])\n",
-      "(28, 0.00037780459388159215, [u'fundamental_36', 'technical_9_na'])\n",
-      "(29, 0.00037783264997415245, [u'fundamental_47', u'fundamental_50'])"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:84: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "training trees\n"
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'rolling'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-30328313a5c6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[1;31m#a quick way to obtain deltas from one month to another but it is false on the first\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m         \u001b[1;31m#month of each id\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m         \u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melt\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"_d\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0melt\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrolling\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m     \u001b[1;31m#removing month 0 to reduce the impact of erroneous deltas\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m     \u001b[0mtrain\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimestamp\u001b[0m\u001b[1;33m!=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mC:\\Users\\jiguo\\AppData\\Local\\Enthought\\Canopy\\User\\lib\\site-packages\\pandas\\core\\generic.pyc\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   2358\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2359\u001b[0m             raise AttributeError(\"'%s' object has no attribute '%s'\" %\n\u001b[1;32m-> 2360\u001b[1;33m                                  (type(self).__name__, name))\n\u001b[0m\u001b[0;32m   2361\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2362\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Series' object has no attribute 'rolling'"
      ]
     }
    ],
@@ -339,9 +279,10 @@
     "    tokeepcolumns.append(columns[elt])\n",
     "    tokeepresiduals.append(residuals[elt])\n",
     "    tokeeppredicts.append(predicts[elt]) ####\n",
+    "    trainer['prediction'+str(elt)]=predicts[elt] ########\n",
     "\n",
     "#creating a new target for a model in charge of predicting which model is best for the current line\n",
-    "targetselector=np.array(tokeeppredicts).T ####\n",
+    "#targetselector=np.array(tokeeppredicts).T ####\n",
     "#targetselector=np.argmin(targetselector, axis=1) ####\n",
     "\n",
     "print(\"training selection model\")\n",
@@ -350,7 +291,7 @@
     "# modelselector = xgb.XGBRegressor(objective='reg:linear', colsample_bytree=.8, \\\n",
     "#                         subsample=.9, min_child_weight=1000, base_score=.5) ####\n",
     "modelselector=ensemble.ExtraTreesRegressor(n_estimators=100, max_depth=4, n_jobs=-1, random_state=rnd, verbose=0) ####\n",
-    "modelselector.fit(targetselector,train.y) ####\n",
+    "modelselector.fit(trainer,train.y) ####\n",
     "#print(pd.DataFrame(modelselector.feature_importances_,index=treecols).sort_values(by=[0]).tail(30))\n",
     "\n",
     "#lastvalues=train[train.timestamp==905][['id']+diff_cols].copy()\n",
@@ -387,11 +328,14 @@
     "    test=featureexpander.transform(test[cols])\n",
     "    #prediction using modelselector and models list\n",
     "    #selected_prediction = modelselector.predict_proba(test.loc[: ,treecols])\n",
-    "    y_test=np.zeros((test.shape[0], len(tokeep)))\n",
+    "    #y_test=np.zeros((test.shape[0], len(tokeep))) ####\n",
     "    for ind,elt in enumerate(tokeepmodels):\n",
     "        #pred['y']+=selected_prediction[:,ind]*elt.predict(test[tokeepcolumns[ind]])\n",
-    "        y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]])\n",
-    "    pred['y']=modelselector.predict(y_test)\n",
+    "        #y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]]) ####\n",
+    "        test['prediction'+str(elt)]=elt.predict(test[tokeepcolumns[ind]]) ########\n",
+    "        \n",
+    "    #pred['y']=modelselector.predict(y_test) ####\n",
+    "    pred['y']=modelselector.predict(test) ########\n",
     "\n",
     "    indexbase=pred.index\n",
     "    pred.index=testid    \n",
@@ -437,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
