--- a/Models/PA2_corrected2.ipynb
+++ b/Models/PA2_corrected2.ipynb
@@ -406,13 +406,22 @@
     "    #prediction using modelselector and models list\n",
     "    #selected_prediction = modelselector.predict_proba(test.loc[: ,treecols])\n",
     "    #y_test=np.zeros((test.shape[0], len(tokeep))) ####\n",
-    "    for ind,elt in enumerate(tokeepmodels):\n",
+    "#     for ind,elt in enumerate(tokeepmodels):\n",
+    "#         #pred['y']+=selected_prediction[:,ind]*elt.predict(test[tokeepcolumns[ind]])\n",
+    "#         #y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]]) ####\n",
+    "#         test['prediction'+str(elt)]=elt.predict(test[tokeepcolumns[ind]]) ########\n",
+    "        \n",
+    "#     #pred['y']=modelselector.predict(y_test) ####\n",
+    "#     pred['y']=modelselector.predict(test) ########\n",
+    "    \n",
+    "    for ind in np.arange(len(tokeep)):\n",
     "        #pred['y']+=selected_prediction[:,ind]*elt.predict(test[tokeepcolumns[ind]])\n",
     "        #y_test[:, ind]=elt.predict(test[tokeepcolumns[ind]]) ####\n",
-    "        test['prediction'+str(elt)]=elt.predict(test[tokeepcolumns[ind]]) ########\n",
+    "        test['prediction'+str(tokeep[ind])]=tokeepmodels[ind].predict(test[tokeepcolumns[ind]]) ########\n",
     "        \n",
     "    #pred['y']=modelselector.predict(y_test) ####\n",
     "    pred['y']=modelselector.predict(test) ########\n",
+    "\n",
     "\n",
     "    indexbase=pred.index\n",
     "    pred.index=testid    \n",
