--- a/XGBoostPackge.ipynb
+++ b/XGBoostPackge.ipynb
@@ -287,7 +287,7 @@
     "    'max_depth': 7,\n",
     "    'seed': 2016,\n",
     "    'silent': 0,\n",
-    "    'eval_metric': 'rmse' # \"logloss\", \"auc\" # for ranking \n",
+    "    'eval_metric': 'rmse' # \"logloss\", \"mlogloss\", auc\" # for ranking \n",
     "}\n",
     "clf = xgb.train(params, dtrain, 500, watchlist, early_stopping_rounds=50)\n",
     "pred = clf.predict(xgb.DMatrix(X_test))"
