--- a/modelTuning.ipynb
+++ b/modelTuning.ipynb
@@ -70,6 +70,21 @@
      "output_type": "stream",
      "text": [
       "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
+      "[CV] max_features=auto, n_estimators=100 .............................\n",
+      "[CV] .. max_features=auto, n_estimators=100, score=-0.000746 -514.4min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed: 514.4min remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[CV] max_features=auto, n_estimators=100 .............................\n"
      ]
     }
@@ -79,7 +94,7 @@
     "param_grid = {'n_estimators':[100], 'max_features':['auto','square'], 'max_depth':[4]}\n",
     "my_scorer=make_scorer(mse, greater_is_better=False)\n",
     "model = GridSearchCV(\n",
-    "    estimator=estimator, param_grid=param_grid, n_jobs=1, cv=5, verbose=20, scoring=my_scorer)\n",
+    "    estimator=estimator, param_grid=param_grid, n_jobs=-1, cv=5, verbose=20, scoring=my_scorer)\n",
     "model.fit(X_train, y_train)"
    ]
   },
