--- a/Stacking.ipynb
+++ b/Stacking.ipynb
@@ -134,14 +134,34 @@
     "y=X.iloc[:,0]+.2*pd.Series(np.random.randn(n))\n",
     "X_train,y_train=X.iloc[:n/2], y.iloc[:n/2]\n",
     "X_test, y_test=X.iloc[n/2:], y.iloc[n/2:]\n",
-    "from sklearn.linear_model import LinearRegression, Ridge\n",
-    "n_folds=5\n",
-    "ensembleObj=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=7), \\\n",
-    "                     base_models=[[LinearRegression() for i in np.arange(n_folds)]], is_TimeSeries=False)#,\\\n",
-    "                                  #[Ridge() for i in np.arange(n_folds)]])\n",
-    "ensembleObj.fit(X_train=X_train, y_train=y_train)\n",
-    "pred=ensembleObj.predict(X_test=X_test)\n",
-    "r2_score(y_test, pred)"
+    "from sklearn.linear_model import LinearRegression, Ridge\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import kagglegym\n",
+    "env = kagglegym.make()\n",
+    "o = env.reset()\n",
+    "excl = [env.ID_COL_NAME, env.SAMPLE_COL_NAME, env.TARGET_COL_NAME, env.TIME_COL_NAME]\n",
+    "col = [c for c in o.train.columns if c not in excl]\n",
+    "\n",
+    "O = pd.read_hdf('../input/train.h5')\n",
+    "d_mean= O[col].median(axis=0)\n",
+    "\n",
+    "ymean_dict = dict(o.train.groupby([\"id\"])[\"y\"].median())\n",
+    "\n",
+    "X_train=(O[col])[O.timestamp <= 905]\n",
+    "y_train=O.y[O.timestamp <= 905]\n",
+    "X_test=(O[col])[O.timestamp > 905]\n",
+    "y_test=O.y[O.timestamp > 905]\n",
+    "X_train=X_train.fillna(d_mean)\n",
+    "X_test=X_test.fillna(d_mean)"
    ]
   },
   {
@@ -151,7 +171,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n_folds=5\n",
+    "ensembleObj=Ensemble(n_folds=n_folds, stacker=LinearRegression(fit_intercept=False, n_jobs=7), \\\n",
+    "                     base_models=[[LinearRegression() for i in np.arange(n_folds)]], is_TimeSeries=False)#,\\\n",
+    "                                  #[Ridge() for i in np.arange(n_folds)]])\n",
+    "ensembleObj.fit(X_train=X_train, y_train=y_train)\n",
+    "pred=ensembleObj.predict(X_test=X_test)\n",
+    "r2_score(y_test, pred)"
+   ]
   }
  ],
  "metadata": {
